<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Silent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_string">Dummy String</string>

    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="about_us">
        方文昊 \n 1085900XX \n 李浩明 \n 1085900XX \n 鄭琳玲 \n 108590056
    </string>


    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Tracking started.</string>
    <string name="geofences_removed">Tracking Stopped.</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient is not yet connected. Please Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>


    <!--List item-->

    <!-- Labels -->
    <string name="Label.Name">Name</string>
    <string name="Label.Latitude">Latitude</string>
    <string name="Label.Longitude">Longitude</string>
    <string name="Label.Radius">Radius</string>
    <string name="Label.AddGeofence">Add a Geofence</string>
    <string name="Label.EmptyState">
        You haven\'t created any geofences yet. Tap the plus button to create one.\n\n\nWill we ever get there?! :]</string>

    <!-- Button -->
    <string name="Button.DeleteGeofence">DELETE</string>

    <!-- Dialogs -->
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>


    <!-- Toast -->
    <string name="Toast.Validation">Please enter valid data for all fields</string>
    <string name="Toast.Error">There was an error. Please try again.</string>


    <!-- Hints -->
    <string name="Hint.Name">Name for the geofence</string>
    <string name="Hint.Latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
    <string name="Hint.Longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
    <string name="Hint.Radius" formatted="false">Radius (%d to %d m)</string>
    <string name="help_1">1. Using \'Select Time\' feature user can silent their devices for a specific period of time. They have to set the time periods.</string>
    <string name="help_2">2. User can select locations as a silent zone using \'Select Place\' feature. There you can select your current place using \'Current Place\'. You can also select nearby places from map and search places worldwide using \'Pick Place\'.</string>
    <string name="help_3">3. Selected time and places will be placed in corresponding lists. You can show your selected places from there.</string>
    <string name="name1">方文昊</string>
    <string name="id1">108590048</string>
    <string name="name2">李浩明</string>
    <string name="id2">108590054</string>
    <string name="name3">鄭琳玲</string>
    <string name="id3">108590056</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="select_this_place">Select this Place</string>
    <string name="select_place">Select Place</string>
    <string name="pick_place">Pick Place</string>
    <string name="current_place">Current Place</string>
    <string name="list">List</string>
    <string name="click_the_following_button_n_to_select_nearby_places_nor_search_places_worldwide">Click the following button \n to select nearby places \nor search places worldwide.</string>
    <string name="todo">TODO</string>
    <string name="longitude2">Longitude</string>
    <string name="radius">Radius</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="smart_silent">Smart Silent</string>
    <string name="be_smart">Be Smart!</string>
    <string name="please_navigate_through_sliding_navigation_drawer">Please navigate through sliding navigation drawer.</string>
    <string name="silent_your_device_at_specific_n_places_and_time_automatically_using_nsmart_silent">Silent your device at specific \n places and time automatically using\nSMART SILENT.</string>


</resources>
