<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F2F1"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#009A9A"
        android:textSize="50sp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/smart_silent"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:shadowColor="#009688"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#009A9A"
        android:textSize="25sp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/be_smart"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:shadowColor="#009688"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:shadowColor="#009688"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:text="@string/silent_your_device_at_specific_n_places_and_time_automatically_using_nsmart_silent"
        android:textColor="#00BCD4"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00BCD4"
        android:textSize="15sp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/please_navigate_through_sliding_navigation_drawer"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:shadowColor="#009688"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"/>

</LinearLayout>